Trying to remove z-index due to layers bug

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -305,8 +305,7 @@
 
 .elementor-widget-wrap {
   position: relative;
-  width: 100%;
-  z-index: 1; }
+  width: 100%; }
 
 .elementor-widget {
   position: relative; }
