--- a/assets/dev/scss/frontend/_grid.scss
+++ b/assets/dev/scss/frontend/_grid.scss
@@ -139,7 +139,6 @@
 .elementor-widget-wrap {
 	position: relative;
 	width: 100%;
-	z-index: 1;
 }
 
 .elementor-widget {
